# Data_Platform

amp-ds-platform-cli-main 3/: Dockerfile  README.md  pyproject.toml  rio.yml  tox.ini
amp-ds-platform-cli-main 3/CI/: ci_checks.py
amp-ds-platform-cli-main 3/amp_ds_platform_cli/: main.py
amp-ds-platform-cli-main 3/amp_ds_platform_cli/authentication/: authentication.py
amp-ds-platform-cli-main 3/amp_ds_platform_cli/job/: create.py  job.py
amp-ds-platform-cli-main 3/docs/: contributing.md
amp-ds-platform-cli-main 3/tests/: conftest.py  test_something.py
amp_ds_platform_assembler/docker/: docker_file_builder.py
amp_ds_platform_assembler/spark_config/: anchors.yml  spark_config_builder.py
amp_ds_platform_library/git/: git_cli_operator.py
amp_ds_platform_library/metadata/: metadata_service_operator.py
amp_ds_platform_library/models/metadata/: metadata_service.py
amp_ds_platform_library/sonarqube/: sonarqube_operator.py
amp_ds_platform_library/splunk/: splunk_operator.py
